# python-workspace

./: .gitignore  code-workspace.json  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
.devcontainer/local-features/bash-completion/: devcontainer-feature.json  install.sh
.devcontainer/local-features/poetry/: devcontainer-feature.json  install.sh
scripts/: clean.py  init.py  new.py
src/: clean.py  init.py  new.py
