[tool.poetry]
name = "python-workspace"
version = "0.1.0"
description = ""
authors = ["MtkN1 <51289448+MtkN1@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_workspace"}]

[tool.poetry.dependencies]
python = "^3.7"
names-generator = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
